2025-06-07T00:53:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15502477291 # 667
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-07
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 440 1449 / 445 1457
* notice: next accum: outdated-unq outdated-all / unq all: 442 1452 / 445 1457
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-23] / []

2025-06-05T00:54:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15455883298 # 665
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-05
* notice: last 14d: unq all: 5 8
* notice: prev accum: outdated-unq outdated-all / unq all: 440 1449 / 444 1456
* notice: next accum: outdated-unq outdated-all / unq all: 440 1449 / 445 1457
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-04]

2025-06-04T00:55:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15431020717 # 664
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-04
* notice: last 14d: unq all: 4 7
* notice: prev accum: outdated-unq outdated-all / unq all: 439 1448 / 444 1456
* notice: next accum: outdated-unq outdated-all / unq all: 440 1449 / 444 1456
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-20] / []

2025-06-03T00:55:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15406015854 # 663