@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-07T00:53:57Z",
+  "timestamp" : "2025-06-08T00:59:52Z",
   "count_outdated" : 1452,
   "uniques_outdated" : 442,
-  "count" : 1457,
-  "uniques" : 445,
+  "count" : 1458,
+  "uniques" : 446,
   "views" : [
     {
       "timestamp": "2025-05-26T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2025-06-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
