@@ -1,3 +1,12 @@
+2025-06-08T00:59:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15513336337 # 668
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-08
+* notice: last 14d: unq all: 4 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 442 1452 / 445 1457
+* notice: next accum: outdated-unq outdated-all / unq all: 442 1452 / 446 1458
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-06-07]
+
 2025-06-07T00:53:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15502477291 # 667
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-07
